libdpkg: Add progress reporting support
Initial support to report progress from dpkg. For now it only changes
behaviour if printing on a tty, later on it could be made pluggable so
that external applications can monitor the internal progress on
expensive dpkg actions.

Based-on-patch-by: Romain Francoise <rfrancoise@debian.org>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -39,6 +39,7 @@ libdpkg_a_SOURCES = \
 	parsehelp.c \
 	parsedump.h \
 	path.c \
+	progress.c progress.h \
 	showpkg.c \
 	string.c \
 	subproc.c \
