s-s-d: Support setting the IO scheduler class and priority
Add new option -I, --iosched <class[:priority]>.

Closes: #443535

Signed-off-by: Guillem Jover <guillem@debian.org>

--- a/configure.ac
+++ b/configure.ac
@@ -73,7 +73,8 @@ fi
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([stddef.h error.h locale.h libintl.h sys/cdefs.h kvm.h])
+AC_CHECK_HEADERS([stddef.h error.h locale.h libintl.h kvm.h \
+                  sys/cdefs.h sys/syscall.h])
 DPKG_CHECK_DEFINE(TIOCNOTTY, [sys/ioctl.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
