Add new files missed on code refactoring
Reported-by: Sven Joachim <svenjoac@gmx.de>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,6 +17,7 @@ lib/nfmalloc.c
 lib/parse.c
 lib/parsehelp.c
 lib/showpkg.c
+lib/subproc.c
 lib/tarfn.c
 lib/trigdeferred.l
 lib/triglib.c
@@ -34,6 +35,7 @@ src/filesdb.c
 src/help.c
 src/main.c
 src/packages.c
+src/pkg-show.c
 src/processarc.c
 src/query.c
 src/remove.c
