Update dpkg-dev dependencies
- Move gnupg to Recommends. It's needed to sign .dsc and .changes.
- Add gpgv to Recommends. Useful to check signatures of extracted packages.
- Add debian-maintainers to Suggests. Together with debian-keyring they
  contain all the GPG keys required to verify official Debian packages.

--- a/debian/control
+++ b/debian/control
@@ -35,8 +35,8 @@ Priority: optional
 Architecture: all
 Depends: dpkg (>= 1.14.6), perl5, perl-modules, bzip2, lzma,
  patch (>= 2.2-1), make, binutils, libtimedate-perl
-Recommends: gcc | c-compiler, build-essential
-Suggests: gnupg, debian-keyring
+Recommends: gcc | c-compiler, build-essential, gnupg, gpgv
+Suggests: debian-keyring, debian-maintainers
 Conflicts: dpkg-cross (<< 2.0.0), devscripts (<< 2.10.26)
 Replaces: manpages-pl (<= 20051117-1)
 Description: Debian package development tools
