dpkg-vendor: new script to query various vendor information
This tool is meant to be used in debian/rules files to have common source
packages across multiple distributions and yet still have slightly
different binary packages.

To automatically conserve customizations across derivatives of a given
distribution, one can use “dpkg-vendor --derives-from vendor” so that all
derivatives keep the same customizations when they rebuild the source
package even if the current vendor is no more the same.

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -100,6 +100,7 @@ dist_man_MANS = \
 	dpkg-split.1 \
 	dpkg-statoverride.8 \
 	dpkg-trigger.1 \
+	dpkg-vendor.1 \
 	dpkg.1 \
 	dpkg.cfg.5 \
 	install-info.8 \
