--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -163,6 +163,11 @@
            add_$lang:$(srcdir)/po/$lang.add
 
 
+[type:man] $(srcdir)/dpkg-vendor.1              \
+           $lang:$lang/dpkg-vendor.1            \
+           add_$lang:$(srcdir)/po/$lang.add
+
+
 [type:man] $(srcdir)/dselect.1                  \
            $lang:$lang/dselect.1    \
            add_$lang:$(srcdir)/po/$lang.add
