Declare the ChangeLog file to be removed on distclean
This fixes ‘make distcheck’.

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,6 +57,7 @@ EXTRA_DIST = \
 	debian/shlibs.override
 
 .PHONY: ChangeLog
+DISTCLEANFILES = ChangeLog
 
 ChangeLog:
 	git log -C --stat 1.15.0.. >$@
