Use backticks instead of non-portable make $(shell) function
The backticks are treated like text, until the shell expands them, thus
making this solution portable.

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -25,7 +25,7 @@ update-po:
 			./po4a.cfg 
 
 # Extract the list of languages from the po4a config file.
-LINGUAS = $(shell sed -ne 's/^.*\[po4a_langs\] \(.*\)$$/\1/p' $(srcdir)/po/po4a.cfg)
+LINGUAS = `sed -ne 's/^.*\[po4a_langs\] \(.*\)$$/\1/p' $(srcdir)/po/po4a.cfg`
 
 install-data-local: install-data-local-@USE_NLS@
 
