--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -34,7 +34,7 @@ EXTRA_DIST = \
 	dpkg-genchanges.pl \
 	dpkg-gencontrol.pl \
 	dpkg-gensymbols.pl \
-	dpkg-name.sh \
+	dpkg-name.pl \
 	dpkg-parsechangelog.pl \
 	dpkg-scanpackages.pl \
 	dpkg-scansources.pl \
@@ -129,17 +129,10 @@ do_perl_subst = sed -e "s:^\#![:space:]*/usr/bin/perl:\#!$(PERL):" \
 		    -e "s:\$$admindir[[:space:]]*=[[:space:]]*['\"][^'\"]*['\"]:\$$admindir=\"$(admindir)\":" \
 		    -e "s:\$$version[[:space:]]*=[[:space:]]*['\"][^'\"]*[\"']:\$$version=\"$(PACKAGE_VERSION)\":"
 
-do_shell_subst = sed -e "s:version=\"[^\"]*\":version=\"$(PACKAGE_VERSION)\":"
-
 
 %: %.pl Makefile
 	@test -d `dirname $@` || $(mkdir_p) `dirname $@`
 	$(do_perl_subst) <$< >$@
-	chmod +x $@
-
-%: %.sh Makefile
-	@test -d `dirname $@` || $(mkdir_p) `dirname $@`
-	$(do_shell_subst) <$< >$@
 	chmod +x $@
 
 
