Add new files to POTFILES

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -29,6 +29,7 @@ src/archives.c
 src/cleanup.c
 src/configure.c
 src/depcon.c
+src/divertdb.c
 src/enquiry.c
 src/errors.c
 src/filesdb.c
@@ -40,6 +41,7 @@ src/processarc.c
 src/query.c
 src/remove.c
 src/select.c
+src/statdb.c
 src/trigcmd.c
 src/trigproc.c
 src/update.c
