--- a/debian/control
+++ b/debian/control
@@ -25,11 +25,8 @@ Replaces: manpages-de (<= 0.4-3), manpages-pl (<= 20051117-1)
 # install-info transition
 # see http://wiki.debian.org/Transitions/DpkgToGnuInstallInfo
 Breaks: jed (<< 1:0.99.18+dfsg.1-13), xjed (<< 1:0.99.18+dfsg.1-13),
- konqueror (<< 4:4.2.4-2), xemacs21-gnome-mule (<= 21.4.22-1),
- xemacs21-gnome-nomule (<= 21.4.22-1), xemacs21-mule (<= 21.4.22-1),
- xemacs21-nomule (<= 21.4.22-1), xemacs21-mule-canna-wnn (<= 21.4.22-1),
- xemacs21-gnome-mule-canna-wnn (<= 21.4.22-1), emacs22 (<= 22.3+1-1),
- emacs22-gtk (<= 22.3+1-1), emacs22-nox (<= 22.3+1-1),
+ konqueror (<< 4:4.2.4-2), xemacs21-support (<< 21.4.22-2),
+ emacs22 (<= 22.3+1-1), emacs22-gtk (<= 22.3+1-1), emacs22-nox (<= 22.3+1-1),
  emacs21 (<= 21.4a+1-5.6), emacs21-nox (<= 21.4a+1-5.6),
  tkinfo (<= 2.8-3), pinfo (<= 0.6.9-3), jed-extra (<= 2.5.3-2)
 Suggests: apt
