Add dpkg-vendor to .gitignore

--- a/scripts/.gitignore
+++ b/scripts/.gitignore
@@ -13,6 +13,7 @@ dpkg-scansources
 dpkg-shlibdeps
 dpkg-source
 dpkg-statoverride
+dpkg-vendor
 update-alternatives
 install-info
 install-info-stamp
