dpkg-statoverride: Rewrite in C

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -42,6 +42,7 @@ src/processarc.c
 src/query.c
 src/remove.c
 src/select.c
+src/statcmd.c
 src/statdb.c
 src/trigcmd.c
 src/trigproc.c
@@ -61,5 +62,4 @@ dpkg-split/split.c
 utils/start-stop-daemon.c
 
 scripts/dpkg-divert.pl
-scripts/dpkg-statoverride.pl
 scripts/update-alternatives.pl
