--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -3,7 +3,8 @@
 localedir = $(datadir)/locale
 INCLUDES = \
 	-DLOCALEDIR=\"$(localedir)\" \
-	-idirafter $(top_srcdir)/libcompat \
+	-idirafter $(top_srcdir)/lib/compat \
+	-I$(top_srcdir)/lib/dpkg \
 	-I$(top_srcdir)/lib
 
 sbin_PROGRAMS =
@@ -14,7 +15,9 @@ if WITH_START_STOP_DAEMON
   start_stop_daemon_SOURCES = \
 	start-stop-daemon.c
 
-  start_stop_daemon_LDADD = ../libcompat/libcompat.a $(SSD_LIBS)
+  start_stop_daemon_LDADD = \
+	../lib/compat/libcompat.a \
+	$(SSD_LIBS)
 endif
 
 sbin_PROGRAMS += dpkg-install-info
@@ -22,7 +25,8 @@ sbin_PROGRAMS += dpkg-install-info
 # Automake has its own install-info rule, gah
 dpkg_install_info_SOURCES = install-info.c
 
-dpkg_install_info_LDADD = ../libcompat/libcompat.a
+dpkg_install_info_LDADD = \
+	../lib/compat/libcompat.a
 
 transform = s/dpkg-install-info/install-info/; $(program_transform_name)
 
