Disable default automake preprocessor include paths
Tell automake not to add “-I.” to the preprocessor flags, to avoid
file collisions with system headers. Re-add the path where config.h
is located. Namespace and use bracketed file inclusions for libdpkg
headers, and use quoted inclusions for program headers.

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_CANONICAL_SYSTEM
 AC_GNU_SOURCE
 DPKG_ARCHITECTURE
 
-AM_INIT_AUTOMAKE([1.8 gnu])
+AM_INIT_AUTOMAKE([1.8 gnu nostdinc])
 
 AM_GNU_GETTEXT_VERSION([0.16.1])
 AM_GNU_GETTEXT([external])
