--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,7 @@ INCLUDES = \
 	-DLOCALEDIR=\"$(localedir)\" \
 	-DADMINDIR=\"$(admindir)\" \
 	-idirafter $(top_srcdir)/lib/compat \
-	-I$(top_srcdir)/lib/dpkg \
+	-I$(top_builddir) \
 	-I$(top_srcdir)/lib
 
 
