--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,29 +1,29 @@
 # This is the list of all source files with translatable strings.
 
-lib/cleanup.c
-lib/compression.c
-lib/database.c
-lib/dbmodify.c
-lib/dump.c
-lib/ehandle.c
-lib/fields.c
-lib/lock.c
-lib/log.c
-lib/md5.c
-lib/mlib.c
-lib/myopt.c
-lib/myopt-util.c
-lib/nfmalloc.c
-lib/parse.c
-lib/parsehelp.c
-lib/showpkg.c
-lib/subproc.c
-lib/tarfn.c
-lib/trigdeferred.l
-lib/triglib.c
-lib/utils.c
-lib/varbuf.c
-lib/vercmp.c
+lib/dpkg/cleanup.c
+lib/dpkg/compression.c
+lib/dpkg/database.c
+lib/dpkg/dbmodify.c
+lib/dpkg/dump.c
+lib/dpkg/ehandle.c
+lib/dpkg/fields.c
+lib/dpkg/lock.c
+lib/dpkg/log.c
+lib/dpkg/md5.c
+lib/dpkg/mlib.c
+lib/dpkg/myopt.c
+lib/dpkg/myopt-util.c
+lib/dpkg/nfmalloc.c
+lib/dpkg/parse.c
+lib/dpkg/parsehelp.c
+lib/dpkg/showpkg.c
+lib/dpkg/subproc.c
+lib/dpkg/tarfn.c
+lib/dpkg/trigdeferred.l
+lib/dpkg/triglib.c
+lib/dpkg/utils.c
+lib/dpkg/varbuf.c
+lib/dpkg/vercmp.c
 
 src/archives.c
 src/cleanup.c
