Add a dpkg cron.daily script to backup the status file
Create /etc/cron.daily/dpkg to handle the backup of /var/lib/dpkg/status
in /var/backups. This is taken out of the cron package and need no
conflicts/breaks as the code does nothing if the current status file is
already backupped.

Moving it out of the cron package makes it more visible for users
inspecting the content of the dpkg package.

Based-on-patch-by: Leo 'costela' Antunes <costela@debian.org>

--- a/debian/rules
+++ b/debian/rules
@@ -84,6 +84,7 @@ binary-arch: install
 	dh_testdir -a
 	dh_testroot -a
 	dh_install --sourcedir=debian/tmp -a
+	dh_installcron -a
 	dh_installlogrotate -a
 
 	install -d debian/dpkg/sbin
@@ -107,7 +108,7 @@ binary-indep: install
 	dh_testdir -i
 	dh_testroot -i
 	dh_install --sourcedir=debian/tmp -i -XDpkg/Gettext.pm
-
+	dh_installcron -i
 	dh_installchangelogs -i ChangeLog*
 	dh_installdocs -i
 	dh_link -i
