Use AM_CPPFLAGS instead of deprecated INCLUDES in Makefile.am files

--- a/dselect/Makefile.am
+++ b/dselect/Makefile.am
@@ -3,7 +3,7 @@
 SUBDIRS = methods po
 
 localedir = $(datadir)/locale
-INCLUDES = \
+AM_CPPFLAGS = \
 	-DLOCALEDIR=\"$(localedir)\" \
 	-DADMINDIR=\"$(admindir)\" -DLIBDIR=\"$(pkglibdir)\" \
 	-DLOCALLIBDIR=\"/usr/local/lib/dpkg\" \
