deb-extra-override(5): new manual page
Factorize description of the extra override file in a new manual page.
Refer to this manpage in dpkg-scanpackages(1) and dpkg-scansources(1).

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -79,6 +79,7 @@ dist_man_MANS = \
 	deb-triggers.5 \
 	deb-old.5 \
 	deb-override.5 \
+	deb-extra-override.5 \
 	deb.5 \
 	dpkg-architecture.1 \
 	dpkg-buildpackage.1 \
