--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -38,6 +38,11 @@
            add_$lang:$(srcdir)/po/$lang.add
 
 
+[type:man] $(srcdir)/deb-extra-override.5       \
+           $lang:$lang/deb-extra-override.5     \
+           add_$lang:$(srcdir)/po/$lang.add
+
+
 [type:man] $(srcdir)/deb-shlibs.5               \
            $lang:$lang/deb-shlibs.5             \
            add_$lang:$(srcdir)/po/$lang.add
