--- a/dselect/Makefile.am
+++ b/dselect/Makefile.am
@@ -51,7 +51,7 @@ CLEANFILES = curkeys.h
 curkeys.$(OBJEXT): curkeys.h
 curkeys.h: $(srcdir)/keyoverride $(srcdir)/mkcurkeys.pl
 	cursesfile=`echo '#include "dselect-curses.h"' | \
-		$(CPP) -I$(top_srcdir) -I$(srcdir) - | \
+		$(CPP) -I$(top_builddir) -I $(srcdir) - | \
 		grep 'curses.h' | head -n 1 | \
 		sed -e 's/^[^"]*"//; s/".*$$//'`; \
 	if [ "$$cursesfile" = "" ]; then \
