Add support for config.d style directory fragment loading
Open the system config.d directory before the system configuration file,
/etc/dpkg/dpkg.cfg.d for dpkg and /etc/dpkg/dselect.cfg.d for dselect,
and load fragments with filenames matching the run-parts standard Debian
constraints (^[a-zA-Z0-9_-]+$).

This will allow external programs to drop configuration fragments on
those directories.

--- a/dselect/Makefile.am
+++ b/dselect/Makefile.am
@@ -3,6 +3,8 @@
 SUBDIRS = methods po
 
 localedir = $(datadir)/locale
+pkgconfdir = $(sysconfdir)/@PACKAGE@
+
 AM_CPPFLAGS = \
 	-DLOCALEDIR=\"$(localedir)\" \
 	-DADMINDIR=\"$(admindir)\" -DLIBDIR=\"$(pkglibdir)\" \
@@ -58,3 +60,6 @@ curkeys.h: $(srcdir)/keyoverride $(srcdir)/mkcurkeys.pl
 		echo "can't find curses file"; exit 1; \
 	fi; \
 	perl $(srcdir)/mkcurkeys.pl $< $$cursesfile >$@
+
+install-data-local:
+	$(mkdir_p) $(DESTDIR)$(pkgconfdir)/dselect.cfg.d
