Add missing files in EXTRA_DIST
Missed in commits a27d14c4423c44b400764c99b669824f4ba6e9a1 and
6c785595d189f65a59284796a9b1f60f16686e85.

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,6 +36,7 @@ EXTRA_DIST = \
 	debian/dpkg-dev.preinst \
 	debian/dpkg-dev.lintian-overrides \
 	debian/dpkg.cfg \
+	debian/dpkg.cron.daily \
 	debian/dpkg.docs \
 	debian/dpkg.install \
 	debian/dpkg.postinst \
