Rename package name in control file to pkg-conff-obsolete

--- a/t-conffile-obsolete/pkg-conff-obsolete-0/DEBIAN/control
+++ b/t-conffile-obsolete/pkg-conff-obsolete-0/DEBIAN/control
@@ -1,8 +1,8 @@
-Package: pkg-conff-orphan
+Package: pkg-conff-obsolete
 Version: 0
 Section: test
 Priority: extra
 Maintainer: Guillem Jover <guillem@debian.org>
 Architecture: all
-Description: test package - conffile orphan
+Description: test package - conffile obsolete
 
