--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Section: utils
 Priority: optional
 Architecture: all
 Depends: dpkg (>= 1.15.4), perl5, perl-modules, bzip2, lzma,
- patch (>= 2.2-1), make, binutils, libtimedate-perl
+ patch (>= 2.2-1), make, binutils, libtimedate-perl, base-files (>= 5.0.0)
 Recommends: gcc | c-compiler, build-essential, fakeroot, gnupg, gpgv
 Suggests: debian-keyring, debian-maintainers
 Conflicts: dpkg-cross (<< 2.0.0), devscripts (<< 2.10.26)
