--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -19,7 +19,7 @@ scripts/Dpkg/Cdata.pm
 scripts/Dpkg/Changelog.pm
 scripts/Dpkg/Changelog/Debian.pm
 scripts/Dpkg/Checksums.pm
-scripts/Dpkg/Control.pm
+scripts/Dpkg/Control/Info.pm
 scripts/Dpkg/Deps.pm
 scripts/Dpkg/ErrorHandling.pm
 scripts/Dpkg/Fields.pm
