Rename Dpkg::Cdata into Dpkg::Control
Update all scripts and modules to use the new module names.

--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -15,10 +15,10 @@ scripts/dpkg-shlibdeps.pl
 scripts/dpkg-source.pl
 scripts/changelog/debian.pl
 scripts/Dpkg/Arch.pm
-scripts/Dpkg/Cdata.pm
 scripts/Dpkg/Changelog.pm
 scripts/Dpkg/Changelog/Debian.pm
 scripts/Dpkg/Checksums.pm
+scripts/Dpkg/Control.pm
 scripts/Dpkg/Control/Info.pm
 scripts/Dpkg/Deps.pm
 scripts/Dpkg/ErrorHandling.pm
