libdpkg: Create a new pkg_list structure and functions
A new functions to construct and free a list and prepend to a list.

--- a/lib/dpkg/Makefile.am
+++ b/lib/dpkg/Makefile.am
@@ -41,6 +41,7 @@ libdpkg_a_SOURCES = \
 	parsedump.h \
 	path.c path.h \
 	pkg-array.c pkg-array.h \
+	pkg-list.c pkg-list.h \
 	progress.c progress.h \
 	showpkg.c \
 	string.c string.h \
